Print page known alignment issues fixed

--- a/src/app/module/report/components/x-ray-patient-image/x-ray-patient-image.component.scss
+++ b/src/app/module/report/components/x-ray-patient-image/x-ray-patient-image.component.scss
@@ -49,7 +49,7 @@
 .patientAnnotatedImage {
   display: flex;
   img {
-    height: 400px;
+    height: auto;
     max-width: 100%;
   }
 }
